[project]
name = "video-service"
version = "0.1.0"
description = ""
authors = [
    {name = "VladLennin",email = "vladilen.marchenko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "runwayml (>=2.3.8,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "openai (>=1.71.0,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "aiohttp (>=3.11.16,<4.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "moviepy[all] (>=2.1.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
